Improve demo layout on mobile and fix various glitches
Making demo layout work on mobile viewports and bringing it
closer to mobile reality:
 - Reducing `padding` to be able to use toggles on mobile and show
 more content in icons demo in upcoming I95bdaffbeea8b6749e1b2dc349d6f645ddea61da
 - Changing `font-size` on tablets and below to `1em` to better resemble
 usage
 - Letting console toggles behave correctly on wider viewports

Also:
 - Using WCAG conformant color from WikimediaUI palette for errors
in console and
 - fixing minor issue with console submit button

--- a/demos/styles/demo.css
+++ b/demos/styles/demo.css
@@ -9,6 +9,11 @@ p {
 }
 
 /* Layout */
+.oo-ui-demo {
+	max-width: 62.5em;
+	margin: 0 auto;
+}
+
 .oo-ui-demo-menu > .oo-ui-widget {
 	display: inline-block;
 	vertical-align: middle;
@@ -19,33 +24,11 @@ p {
 	width: 10em;
 }
 
-.oo-ui-demo {
-	max-width: 62.5em;
-	margin: 0 auto;
-}
-
 .oo-ui-demo-container {
+	/* Needed for applying `padding` further below */
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
-}
-
-@media ( max-width: 750px ) {
-	.oo-ui-demo-menu {
-		margin-bottom: 1em;
-	}
-	.oo-ui-demo-container {
-		padding: 1em 2em;
-	}
-}
-
-@media ( min-width: 751px ) {
-	.oo-ui-demo-menu {
-		margin-bottom: 2em;
-	}
-	.oo-ui-demo-container {
-		padding: 2em 4em;
-	}
 }
 
 /* Toolbars demo */
@@ -124,7 +107,6 @@ p {
 .oo-ui-demo-console-toggle {
 	float: right;
 	margin-top: -2em;
-	margin-right: -2em;
 	cursor: pointer;
 	-webkit-transition: background-color 100ms, color 100ms, transform 100ms;
 	-moz-transition: background-color 100ms, color 100ms, transform 100ms;
@@ -183,7 +165,7 @@ p {
 
 .oo-ui-demo-console-log-line-input {
 	font-style: italic;
-	color: #555;
+	color: #54595d;
 }
 
 .oo-ui-demo-console-log-line-input::before {
@@ -198,7 +180,7 @@ p {
 }
 
 .oo-ui-demo-console-log-line-error {
-	color: #f00;
+	color: #d33;
 }
 
 .oo-ui-demo-console-label {
@@ -241,6 +223,7 @@ p {
 	background: #f8f9fa;
 	color: #222;
 	display: inline-block;
+	position: relative;
 	width: 20px;
 	line-height: 1.6;
 	text-align: center;
@@ -249,10 +232,66 @@ p {
 	-ms-user-select: none;
 	user-select: none;
 	cursor: pointer;
+	-webkit-transition: background-color 100ms, color 100ms;
+	-moz-transition: background-color 100ms, color 100ms;
+	transition: background-color 100ms, color 100ms;
 }
 
 .oo-ui-demo-console-submit:hover {
 	background: #fff;
 	color: #444;
 }
+
+/* Special cases: ActionFieldLayout top aligned,
+FieldLayout left & right aligned */
+.oo-ui-fieldLayout-align-left,
+.oo-ui-fieldLayout-align-right {
+	max-width: 50em;
+}
+
+.oo-ui-fieldLayout-align-top.oo-ui-actionFieldLayout .oo-ui-demo-console-toggle,
+.oo-ui-fieldLayout-align-left .oo-ui-demo-console-toggle,
+.oo-ui-fieldLayout-align-right .oo-ui-demo-console-toggle {
+	margin-right: -2em;
+}
+
+.oo-ui-fieldLayout-body:after {
+	content: ' ';
+	clear: both;
+	display: block;
+}
+
+/* Media Queries */
+@media ( max-width: 750px ) {
+	body {
+		font-size: 1em;
+	}
+
+	.oo-ui-demo-menu {
+		margin-bottom: 1em;
+	}
+
+	.oo-ui-demo-menu > .oo-ui-widget {
+		margin-bottom: 1em;
+	}
+
+	.oo-ui-demo-container {
+		padding: 1em 2.5em 1em 1em;
+	}
+
+	.oo-ui-demo-console-toggle {
+		margin-right: -2em;
+	}
+}
+
+@media ( min-width: 751px ) {
+	.oo-ui-demo-menu {
+		margin-bottom: 2em;
+	}
+
+	.oo-ui-demo-container {
+		padding: 2em;
+	}
+}
+
 /* stylelint-enable selector-pseudo-element-colon-notation */
